LAB/TFT_LCD_DRIVER/PSoC/ILI9488/ILI9488_test.cydsn/CortexM0/ARM_GCC_493/Debug/REBUILD.log
--------------- Rebuild Started: 02/27/2017 14:43:35 Project: ILI9488_test, Configuration: ARM GCC 4.9-2015-q1-update Debug ---------------
Deleting file ".\CortexM0\ARM_GCC_493\Debug\main.o"
Deleting file ".\ILI9488_test.cycdx"
Deleting file ".\ILI9488_test.svd"
Deleting file ".\ILI9488_test.rpt"
Deleting file ".\ILI9488_test_timing.html"
cydsfit.exe -.appdatapath "C:\Users\Studie-PC\AppData\Local\Cypress Semiconductor\PSoC Creator\4.0" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p C:\Users\Studie-PC\Documents\GitHub\ITAMS\LAB\TFT_LCD_DRIVER\PSoC\ILI9488\ILI9488_test.cydsn\ILI9488_test.cyprj -d CY8C4245AXI-483 -s C:\Users\Studie-PC\Documents\GitHub\ITAMS\LAB\TFT_LCD_DRIVER\PSoC\ILI9488\ILI9488_test.cydsn\Generated_Source\PSoC4 -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
ADD: pft.M0040: information: The following 13 pin(s) will be assigned a location by the fitter: DATA(0), DATA(1), DATA(2), DATA(3), DATA(4), DATA(5), DATA(6), DATA(7), LCD_CS(0), LCD_protected_RS(0), LCD_RD(0), LCD_RST(0), LCD_WR(0)
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_493\Debug/main.lst -g -D DEBUG -Wall -ffunction-sections -Og -ffat-lto-objects -c main.c -o .\CortexM0\ARM_GCC_493\Debug\main.o
In file included from main.c:13:0:
TFT_LCD.h:93:8: error: conflicting types for 'TFT_read_data'
 size_t TFT_read_data(uint8_t cmd, uint8_t *dataOut, size_t bufSize); //J
        ^
TFT_LCD.h:83:6: note: previous declaration of 'TFT_read_data' was here
 void TFT_read_data(uint8_t *dataPtr); // L
      ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 02/27/2017 14:43:50 ---------------
